[Changes 1.2c01 ]

* Add halfop nick prefix to default status line, and change the voice prefix
  so it appears whether or not you're opped. (caf)

* Add halfop support to $channel() scripting function. (caf)

* Rework /SCAN and /NAMES formatting.  This removes the /FSETs NAMES_BOTCOLOR,
  NAMES_FRIENDCOLOR, NAMES_NICKCOLOR, NAMES_OPCOLOR, NAMES_SHITCOLOR and
  NAMES_VOICECOLOR and replaces them with new /FSETs. (caf)

* Add $ishalfop(<nick> <channel) scripting function, just like the
  existing function in EPIC. (caf)

* Fix four bugs in the /FE scripting function. (caf)

* Fix incompatibility with 64-bit platforms. (caf)

* Fix module load version check logic. (caf)

* [1.1s01] Cleanups to allow compiling with new gcc releases. (caf)

* [1.1s01] Fix configure check for termcap.h. (caf)

* [1.1s01] Re-implement code to find available vhost addresses 
  (CVE-2007-5839). (caf)

* [1.1s01] Fix test for GCC >= 2.7 - fixes compiling on S390 platform. (caf)

* [1.1s01] Improve buffer handling in convert_output_format_raw 
  (CVE-2007-4584). (caf)

* [1.1s01] Handle negative numerics correctly (CVE-2007-3360). (caf)

[Changes 1.1-final]

* Fixed bug with using [$8] in expressions (Reported by BlackJac)
  (Patch from |Rain|) (BugID: 64) (powuh)

* Fixed bug in /set show_end_of_msgs.  When OFF prevented hooking
  of some end_of_msg numerics.  (Reported by BlackJac)
  (Patch from |Rain|) (BugID: 51) (powuh)

* Fixed incorrect ordering of operations in screen.c which
  caused an off-by-one access at the end ofthe buffer.
  (Patch from |Rain|) (BugID: 48) (powuh)

* Fixed ischanvoice() to be compatiable with epic.  Maintained
  reverse functionality as not to break existing scripts.
  (Patch from |Rain|) (BugID: 20) (powuh)

* Fixed segfault with convert_output_format not honoring
  MAX_RECURSE. (Patch from |Rain|) (powuh)

* Fixed possble rouge server exploit:
  If a rogue server sends us a ctcp request from an extremely large